# pyaedt-toolkits-common

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  SECURITY.md  codecov.yml  index.html  pyproject.toml  pytest.ini  robots.txt  sitemap.xml  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci-label.yml  ci-pr.yml  ci_cd.yml  label.yml  main.yml  nightly-doc.yml  nightly-test.yml  release.yml
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 229.dependencies.md  248.maintenance.md  252.maintenance.md  253.maintenance.md  256.added.md  257.maintenance.md  260.added.md  261.added.md  262.maintenance.md  263.maintenance.md  264.added.md  265.maintenance.md  267.fixed.md  268.maintenance.md  269.documentation.md  270.documentation.md  271.maintenance.md  273.maintenance.md  275.dependencies.md  276.miscellaneous.md  280.maintenance.md  281.added.md  285.maintenance.md  286.documentation.md  288.maintenance.md  289.maintenance.md  290.maintenance.md  291.dependencies.md  294.maintenance.md  296.maintenance.md  297.maintenance.md  298.dependencies.md  299.fixed.md  300.dependencies.md  301.dependencies.md  302.dependencies.md  303.maintenance.md  305.maintenance.md  306.maintenance.md  307.fixed.md  (+88 more)
doc/source/: Contributing.rst  Getting_started.rst  changelog.rst  conf.py  create_documentation.bat  distributing.rst  index.rst
doc/source/Getting_Started/: Architecture.rst  Installation.rst  index.rst  installation.rst
doc/source/Toolkit/: api.rst  common_api.rst  index.rst  ui.rst
doc/source/examples/: index.rst
doc/source/getting_started/: architecture.rst  example_toolkit.rst  index.rst  installation.rst  rest_api.rst  toolkit_setup.rst
doc/source/toolkit/: api.rst  ui.rst
examples/backend/: api_aedt_connect_session_example.py  api_aedt_example.py  api_aedt_open_project_example.py  api_edb_example.py  api_generic_aedt_example.py  api_generic_edb_example.py  backend_properties.json  connect_session.py  generic_api_example.py  open_project.py  rest_api_aedt_example.py
examples/pyaedt_toolkit/: frontend_actions.py  frontend_api.py  properties.json
examples/toolkit/pyaedt_toolkit/: __init__.py  run_toolkit.py
examples/toolkit_webapp/: run_toolkit.py
examples/toolkit_webapp/backend/: run_backend.py
examples/toolkit_webapp/ui/: actions.py  run_frontend.py
examples/ui/background_3dplot/: background_plotter.py
examples/ui/default_ui_example/: default_ui.py  models.py
examples/ui/widget_example/: default_ui.py  widget_usage.py
examples/widget_example/: logger.py  table_widget.py  widget_usage.py
scripts/: preload_mono_libs.py
tests/: conftest.py  test_00_service_generic.py
tests/backend/: conftest.py  test_01_service_toolkit.py
tests/backend/tests_aedt_api/: __init__.py  backend_properties.json  conftest.py  models.py  test_aedt.py
tests/backend/tests_api/: __init__.py  backend_properties.json  conftest.py  test_aedt.py  test_common.py  test_edb.py
tests/backend/tests_common_api/: __init__.py  backend_properties.json  backend_properties.toml  conftest.py  models.py  test_common.py
tests/backend/tests_edb_api/: __init__.py  backend_properties.json  conftest.py  models.py  test_edb.py
tests/backend/tests_rest_api/: __init__.py  backend_properties.json  conftest.py  models.py  test_rest_api.py
tests/backend/tests_utils/: __init__.py  test_util.py
tests/input_data/: Test.aedt
tests/tests_api/: conftest.py  test_common.py
tests/ui/: __init__.py  conftest.py  test_example_geometry_menu.py  test_example_help_menu.py  test_example_plot_design_menu.py  test_example_settings.py  test_json_themes.py  test_load_images.py
tests/ui/utils/: __init__.py  test_json_themes.py  test_load_images.py
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/_modules/: index.html
version/0.10/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.11/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.12/: changelog.html  contributing.html  distributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.13/: changelog.html  contributing.html  distributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.14/: changelog.html  contributing.html  distributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.15/: changelog.html  contributing.html  genindex.html  index.html  searchindex.js
version/0.16/: changelog.html  contributing.html  distributing.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.3/: .buildinfo  announcement.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.4/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.5/: .buildinfo  announcement.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.6/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.7/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.8/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.9/: contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/: .buildinfo  changelog.html  contributing.html  distributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/stable/: changelog.html  contributing.html  distributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
(+2722 files in other folders)
