[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-aedt-toolkits-common"
dynamic = ["version"]
description = "User interface example repository to create your toolkit."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "build==1.3.0",
    "twine==6.1.0",
    "pyaedt>=0.15.2",
    "pydantic>=2.0,<2.12",
    "tomli; python_version < '3.12'",
    "attrs<25.2.0"
]

[project.optional-dependencies]
all = [
    "pyaedt[all]>=0.15.2",
    "flask",
    "pyside6==6.9.2",
    "pyqtgraph",
    "qdarkstyle",
    "ansys-tools-visualization-interface[pyvistaqt]"
]
tests = [
    "pyaedt[all]>=0.15.2",
    "flask",
    "pyside6==6.9.2",
    "pytest>=7.4.0,<8.5",
    "pytest-cov>=4.0.0,<6.3",
    "pytest-qt>=4.0.0,<4.6",
    "ansys-aedt-toolkits-common[all]",
]
doc = [
    "ansys-aedt-toolkits-common[all]",
    "recommonmark>=0.7.0,<0.8",
    "pyside6==6.9.2",
    "ansys-sphinx-theme==1.6.0",
    "numpydoc>=1.5.0,<1.10",
    "Sphinx>=7.1.0,<8.3",
    "sphinx-copybutton>=0.5.0,<0.6",
    "sphinx-autobuild==2021.3.14; python_version == '3.8'",
    "sphinx-autobuild==2024.10.3; python_version > '3.8'",
    "nbsphinx>=0.9.0,<0.10",
    "sphinx_design",
    "jupytext",
    "ipython>=8.13.0,<9.1",
    "jupyterlab>=4.0.0,<4.5",
    "pypandoc>=1.10.0,<1.16",
    "ipywidgets",
]

[tool.flit.module]
name = "ansys.aedt.toolkits.common"

[project.urls]
Source = "https://github.com/ansys/pyaedt-toolkits-common.git"
Issues = "https://github.com/ansys/pyaedt-toolkits-common/issues"
Discussions = "https://github.com/ansys/pyaedt-toolkits-common/discussions"
Documentation = "https://aedt.common.toolkit.docs.pyansys.com"
Releases = "https://github.com/ansys/pyaedt-toolkits-common/releases"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt.toolkits.common"]
omit = [
    # Omit UI testing
    "src/ansys/aedt/toolkits/common/ui/*",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
xfail_strict = false
markers = [
    "aedt_common_api: mark test as related to the AEDT common API.",
    "common_api: mark test as related to the common API.",
    "edb_api: mark test as related to the EDB API.",
    "rest_api: mark test as related to the REST API.",
]

[tool.towncrier]
package = "ansys.aedt.toolkits.common"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys-internal/pyaedt-toolkits-common/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys-internal/pyaedt-toolkits-common/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
