[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-aedt-toolkits-common"
dynamic = ["version"]
description = "User interface example repository to create your toolkit."
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "build==1.0.3",
    "twine==4.0.2",
    "pyaedt",
    "PySide6-Essentials",
    "pyqtgraph",
    "qdarkstyle",
    "flask",
    "pydantic",
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]
doc = [
    "ansys-sphinx-theme==0.12.5",
    "numpydoc==1.6.0",
    "recommonmark==0.7.1",
    "sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "enum-tools[sphinx]==0.11.0",
    "sphinx-autoapi==3.0.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.25.2",
    "sphinx-gallery==0.15.0",
    "sphinx-notfound-page==1.0.0",
    "nbsphinx==0.9.3",
]

[tool.flit.module]
name = "ansys.aedt.toolkits.common"

[project.urls]
Source = "https://github.com/ansys/pyaedt-toolkits-common.git"
Tracker = "https://github.com/ansys/pyaedt-toolkits-common/issues"
Homepage = "https://github.com/ansys/pyaedt-toolkits-common.git"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt"]

[tool.coverage.report]
show_missing = true
