[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-aedt-toolkits-common"
dynamic = ["version"]
description = "User interface example repository to create your toolkit."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "ansys-tools-common",
    "pydantic>=2.0,<2.14",
    "pyaedt",
    "tomli; python_version < '3.12'",
]

[project.optional-dependencies]
all = [
    "ansys-tools-visualization-interface[pyvistaqt]",
    "flask",
    "pyaedt[all]",
    "pyqtgraph",
    "pyside6",
    "qdarkstyle",
]

[dependency-groups]
dev = [
  "prek==0.4.3",
  { include-group = "doc" },
  { include-group = "tests" },
]
doc = [
    "ansys-sphinx-theme>=1.8.2",
    "ipython",
    "ipywidgets",
    "jupyterlab",
    "jupytext",
    "nbsphinx",
    "numpydoc",
    "pypandoc",
    "recommonmark",
    "Sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx_design",
    "pyvista[jupyter]",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
]

[tool.flit.module]
name = "ansys.aedt.toolkits.common"

[project.urls]
Source = "https://github.com/ansys/pyaedt-toolkits-common.git"
Issues = "https://github.com/ansys/pyaedt-toolkits-common/issues"
Discussions = "https://github.com/ansys/pyaedt-toolkits-common/discussions"
Documentation = "https://aedt.common.toolkit.docs.pyansys.com"
Releases = "https://github.com/ansys/pyaedt-toolkits-common/releases"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt.toolkits.common"]
omit = [
    # Omit UI testing
    "src/ansys/aedt/toolkits/common/ui/*",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
xfail_strict = false
markers = [
    "aedt_common_api: mark test as related to the AEDT common API.",
    "common_api: mark test as related to the common API.",
    "edb_api: mark test as related to the EDB API.",
    "rest_api: mark test as related to the REST API.",
]

[tool.towncrier]
package = "ansys.aedt.toolkits.common"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys-internal/pyaedt-toolkits-common/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys-internal/pyaedt-toolkits-common/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
